remove --add-exports from preset VM options in GraalVM